--- a/bigus-web-design/package.json
+++ b/bigus-web-design/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^5.6.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "stripe": "^17.6.0",
     "tailwind-merge": "^3.0.1"
   },
   "devDependencies": {
